--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-grid",
+  "name": "proposify-design-system",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.2",
     "react-spinners-kit": "^1.9.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,14 +43,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "webpack": "4.42.0",
     "@storybook/addon-actions": "^6.0.12",
     "@storybook/addon-essentials": "^6.0.12",
     "@storybook/addon-links": "^6.0.12",
     "@storybook/node-logger": "^6.0.12",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.12",
+    "@storybook/react": "^6.2.9",
     "babel-loader": "^8.1.0",
-    "react-is": "^16.13.1"
+    "react-is": "^16.13.1",
+    "webpack": "4.42.0"
   }
 }
