--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.1.0",
+    "react-docgen": "^5.3.1",
     "react-is": "^16.13.1",
     "webpack": "4.42.0"
   }
