--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proposify-design-system",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://aguiar-tiago.github.io/proposify-design-system",
   "dependencies": {
     "@storybook/addon-docs": "^6.2.9",
     "@storybook/addon-knobs": "^6.2.9",
@@ -26,7 +27,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public --no-manager-cache",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build-storybook",
+    "deploy-storybook": "gh-pages -d storybook-static"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -63,6 +66,7 @@
     "@storybook/react": "^6.2.9",
     "@svgr/cli": "^5.5.0",
     "babel-loader": "^8.1.0",
+    "gh-pages": "^3.1.0",
     "react-docgen": "^5.3.1",
     "react-is": "^16.13.1",
     "webpack": "4.42.0"
