--- a/package.json
+++ b/package.json
@@ -1,30 +1,49 @@
 {
   "name": "proposify-design-system",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "private": false,
   "homepage": "http://aguiar-tiago.github.io/proposify-design-system",
+  "main": "dist/index.js",
+  "author": "Proposify Inc.",
+  "license": "MIT",
+  "files": [
+    "dist/*"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.22",
     "@storybook/addon-docs": "^6.2.9",
     "@storybook/addon-knobs": "^6.2.9",
     "@storybook/addons": "^6.2.9",
     "@storybook/theming": "^6.2.9",
+    "@styled-system/should-forward-prop": "^5.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "actions": "^1.3.0",
     "axios": "^0.19.2",
+    "emotion-theming": "^10.0.27",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.2",
     "react-spinners-kit": "^1.9.1",
     "styled-components": "^5.1.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "babel-src": "babel src --out-dir dist --ignore \"**/__tests__/*.test.js\",\"**/*.stories.js\",\"**/testUtils/**/*.js\" -s",
+    "clean": "rimraf dist",
+    "prepack": "npm run build",
+    "build": "run-s clean babel-src",
+    "build:index": "node ./config/buildIndex.js",
     "prepublish": "rm -rf dist && NODE_ENV=production babel src/components/* --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -62,15 +81,28 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.7.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-knobs": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "@svgr/cli": "^5.5.0",
+    "@testing-library/react": "^8.0.9",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "cross-env": "^6.0.3",
     "gh-pages": "^3.1.0",
+    "jest": "^24.9.0",
+    "jest-dom": "^3.5.0",
+    "jsdom": "^12.0.0",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react-docgen": "^5.3.1",
     "react-is": "^16.13.1",
     "webpack": "4.42.0"
