--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proposify-design-system",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "private": false,
   "homepage": "http://aguiar-tiago.github.io/proposify-design-system",
   "main": "dist/index.js",
@@ -30,8 +30,8 @@
     "axios": "^0.19.2",
     "emotion-theming": "^10.0.27",
     "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.4.2",
     "react-spinners-kit": "^1.9.1",
     "styled-components": "^5.1.1",
@@ -42,7 +42,7 @@
     "babel-src": "babel src --out-dir dist --ignore \"**/__tests__/*.test.js\",\"**/*.stories.js\",\"**/testUtils/**/*.js\" -s",
     "clean": "rimraf dist",
     "prepack": "npm run build",
-    "build": "run-s clean babel-src",
+    "build": "run-s build:index clean babel-src",
     "build:index": "node ./config/buildIndex.js",
     "prepublish": "rm -rf dist && NODE_ENV=production babel src/components/* --out-dir dist --copy-files",
     "test": "react-scripts test",
@@ -96,15 +96,28 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "camelcase": "^5.0.0",
+    "capitalize": "^1.0.0",
+    "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
+    "full-icu": "^1.3.0",
     "gh-pages": "^3.1.0",
     "jest": "^24.9.0",
     "jest-dom": "^3.5.0",
     "jsdom": "^12.0.0",
+    "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react-docgen": "^5.3.1",
     "react-is": "^16.13.1",
+    "rimraf": "^3.0.0",
     "webpack": "4.42.0"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "styled-system": "^5.1.2",
+    "styled-components": "^5.1.1"
   }
 }
