--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "run-s build:index clean babel-src",
     "build:index": "node ./config/buildIndex.js",
     "prepublish": "rm -rf dist && NODE_ENV=production babel src/components/* --out-dir dist --copy-files",
-    "test": "react-scripts test",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest \"src/.*\\.test\\.js\"",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public --no-manager-cache",
     "build-storybook": "build-storybook -s public",
@@ -93,8 +93,8 @@
     "@storybook/react": "^6.2.9",
     "@svgr/cli": "^5.5.0",
     "@testing-library/react": "^8.0.9",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "camelcase": "^5.0.0",
     "capitalize": "^1.0.0",
@@ -117,7 +117,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "styled-system": "^5.1.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.2"
   }
 }
