--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "build:index": "node ./config/buildIndex.js",
     "prepublish": "rm -rf dist && NODE_ENV=production babel src/components/* --out-dir dist --copy-files",
     "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest \"src/.*\\.test\\.js\"",
+    "test:watch": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --watch",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public --no-manager-cache",
     "build-storybook": "build-storybook -s public",
